--- a/listofnumbers/listofnumbers.vcxproj
+++ b/listofnumbers/listofnumbers.vcxproj
@@ -141,6 +141,10 @@
   <ItemGroup>
     <ClInclude Include="ListOfNumbers.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="ListOfNumbers.cpp" />
+    <ClCompile Include="main.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
